Implements user/tenant get_by_name. Fixes bug 972800.
Change-Id: I1ebcec54728844691eb1b0d9b4d94e749c70ddeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -21,3 +21,4 @@ Zhongyue Luo <lzyeval@gmail.com>
 Ziad Sawalha <github@highbridgellc.com>
 jakedahn <jake@ansolabs.com>
 termie <github@anarkystic.com>
+Rafael Durán Castañeda <rafadurancastaneda@gmail.com>
